All_notes is now fixed sized and internally a scrollbar is used

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,10 +1,14 @@
 .all_notes {
     width: 25%;
+    height:100vh;
+    overflow-y: auto;
     float: left;
     text-align:justify;
 }
 .single_note {
     width: 75%;
+    height:100vh;
+    overflow-y: auto;
     float: left;
     text-align:justify;
 }
